Tests/RunCMake/Syntax/NameWithEscapedSpaces-stderr.txt
^CMake Error at NameWithEscapedSpaces.cmake:1 \(message\):
  Syntax error in cmake code at

    .*/Tests/RunCMake/Syntax/NameWithEscapedSpaces.cmake:1

  when parsing string

    \${var\\ with\\ escaped\\ space}

  syntax error, unexpected cal_SYMBOL, expecting } \(6\)
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
